Spacing fix and logo
- Added new cloudflare link

--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,7 @@ header .intro-text .intro-heading {
     font-size: 18px;
     font-weight: 300;
     line-height: 25px;
-    margin: 20px 100px 60px 100px;
+    margin: 20px 20px 60px 20px;
 }
 
 /*--------------------
